# facerecognition

./: CMakeLists.txt  README.md  dnn_face_feature.h  face_compare_server.cpp
notebooks/: dlib_face.ipynb
tests/: check.sh
